# CyberInsight.Backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.ps1  structure.txt  test_dns_engine.py
alembic/: env.py
alembic/versions/: 22a3f20271ae_add_qr_tables.py  4661e0ef5601_create_scans_table.py  6525756b7c27_add_qr_codes_table.py  6f8b9f5af75e_create_users_table.py  90ae9a34c73d_increase_grade_column_length.py  a25c64d972a5_add_qr_codes_table.py  bd1a44bc253b_make_scan_user_optional.py  d3e938825830_add_report_fields_to_scans.py
src/cyberinsight/: main.py
src/cyberinsight/api/: router.py
src/cyberinsight/config/: settings.py
src/cyberinsight/controllers/: __init__.py  auth_controller.py  qr_code_controller.py  qr_decoder_controller.py  scan_controller.py
src/cyberinsight/core/: database.py  dependencies.py
src/cyberinsight/engines/: dns_engine.py  header_engine.py  score_engine.py  ssl_engine.py  technology_engine.py  url_engine.py
src/cyberinsight/models/: __init__.py  qr_code.py  qr_scan_history.py  scan.py  user.py
src/cyberinsight/repositories/: qr_code_repository.py  scan_repository.py  user_repository.py
src/cyberinsight/schemas/: auth_schema.py  dashboard_schema.py  qr_code_schema.py  scan_detail_schema.py  scan_history_schema.py  scan_report.py  scan_schema.py
src/cyberinsight/services/: __init__.py  auth_service.py  qr_decoder_service.py  (+1 more)
tests/: test_dns_engine.py  test_dns_intelligence.py  test_header_engine.py  test_score_engine.py  test_ssl_engine.py  test_technology_engine.py  test_url_engine.py
(+81 files in other folders)
