[project]
name = "cyberinsight-backend"
version = "1.0.0"
description = "AI-Powered Website Security Intelligence Platform Backend"
authors = [
    { name = "Kevin Chabalala" }
]
readme = "README.md"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"